<resources>
    <string name="app_name">Juegarte</string>

    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>

    <string name="profile">Profile</string>

    <string name="email">Email</string>

    <string name="true_btn">True</string>
    <string name="false_btn">False</string>
    <string name="games">Games</string>

    <array name="questions">
        <item>True answer;true</item>
        <item>False answer;false</item>
        <item>Tercera pregunta;false</item>
        <item>Cuarta pregunta;false</item>
        <item>Quinta pregunta;true</item>
        <item>Buen trabajo!;false</item>
    </array>

    <array name="answers">
        <item>San Jose</item>
        <item>Panama</item>
        <item>Santiago</item>
        <item>Whasington DC</item>
    </array>

</resources>